# nmstate-rs

./: .gitignore  Cargo.toml  DEVEL.md  Makefile  Makefile.inc
.github/workflows/: main.yml
src/cli/: Cargo.toml  nmstatectl.rs
src/clib/: Cargo.toml  lib.rs
src/clib/test/: nmstate_test
src/lib/: Cargo.toml  error.rs  iface.rs  io.nmstate.plugin.varlink  ip.rs  lib.rs  net_state.rs  plugin.rs
src/lib/ifaces/: base.rs  ethernet.rs  inter_ifaces.rs  linux_bridge.rs  mod.rs  veth.rs
src/lib/nispor/: apply.rs  base_iface.rs  error.rs  ip.rs  linux_bridge.rs  mod.rs  show.rs  veth.rs
src/lib/nm/: apply.rs  checkpoint.rs  error.rs  mod.rs  show.rs
src/libnm_dbus/: Cargo.toml  active_connection.rs  checkpoint.rs  dbus.rs  dbus_proxy.rs  dbus_value.rs  error.rs  lib.rs  nm_api.rs
src/libnm_dbus/connection/: bridge.rs  conn.rs  ip.rs  mod.rs
src/libnm_dbus/tests/: all.rs  haha.rs
src/libnmstate/: Cargo.toml  PLUGIN_DESIGN.md  error.rs  iface.rs  io_nmstate_plugin.rs  lib.rs  net_state.rs  plugin.rs
src/nmstatectl/: Cargo.toml  nmstatectl.rs
src/plugin_nm/: Cargo.toml  build.rs  io.nmstate.plugin.varlink  main.rs
src/plugin_nmrs/: Cargo.toml  io.nmstate.plugin.varlink  io_nmstate_plugin.rs  main.rs  plugin.rs
src/plugin_nmrs/nm/: connection.rs  mod.rs  profile.rs
src/python/: setup.py
src/python/libnmstate/: __init__.py  clib_wrapper.py  netapplier.py  netinfo.py
