[package]
name = "nmstate"
version = "0.1.0"
authors = ["Gris Ge <fge@redhat.com>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nm-dbus = {path = "../libnm_dbus"}
#nispor = "1.2"
nispor = { git = "https://github.com/nispor/nispor", branch = "base" }
log = "0.4.14"
