[package]
name = "plugin-nm"
version = "0.1.0"
authors = ["Gris Ge <fge@redhat.com>"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "nmstate_plugin_nm"
path = "main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
varlink = "11"

[dependencies.nm]
git = "https://github.com/balena-io-modules/libnm-rs"

[build-dependencies]
varlink_generator = "9"
